--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>Relatório das redes sociais</h1>
+        <h1>relatorio sobre irmã</h1>
         <nav>
-            <a href="index.html">Mundo</a>
-            <a href="#">Minha escola</a>
+            <a href="index.html">irmã</a>
+            <a href="#">Minha irmã</a>
         </nav>
     </header>
     <main class="graficos-section">
@@ -19,7 +19,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>Desenvolvido por Amanda</p>
     </footer>
 </body>
 </html>
